--- a/.github/workflows/ch01-hello.yml
+++ b/.github/workflows/ch01-hello.yml
@@ -2,8 +2,10 @@
 
 name: actions!
 on: push
+
 jobs:
   job1:
+    name: First run
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -14,12 +16,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script Ubuntu Step Two
-        run: | 
+        run: |
          echo Hello, world! # for single line
          env | sort
         
 
   job2:
+    name: Second Run
     # The type of runner that the job will run on
     runs-on: windows-latest
 
