--- a/.github/workflows/ch01-hello.yml
+++ b/.github/workflows/ch01-hello.yml
@@ -25,15 +25,10 @@ jobs:
     name: Second Run
     # The type of runner that the job will run on
     runs-on: windows-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+      
     steps:
       - name: Step Two Windows
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       - name: Run a two-lines script Windows
-        run: |
-         echo Hello Windows
-         echo Hello Windows second line
-         "Get-ChilItem Env : | Sort-Object Name"
+        run:  "Get-ChilItem Env : | Sort-Object Name"
