--- a/.github/workflows/ch01-01-1-hello.yml
+++ b/.github/workflows/ch01-01-1-hello.yml
@@ -1,6 +1,12 @@
-name: hello
+name: ch01-01-1
 
-on: [push]
+on: 
+    pull_request:
+        branches:
+        - master
+    push:
+      branches: 
+        - develop
 
 jobs:
   build:
