--- a/.github/workflows/python-syntax-checker.yml
+++ b/.github/workflows/python-syntax-checker.yml
@@ -1,7 +1,10 @@
 name: Python-syntax-checker
 # description: "Run flake8 to find syntax errors in a Python repo"
 
-on: [push]
+on:
+  pull_request:
+    branches: 
+      - develop
 
 jobs:
   build:
