--- a/.github/workflows/actions-need.yml
+++ b/.github/workflows/actions-need.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: actions-need
-on: push
+on: [pull_request]
 
 jobs:
   job1:
