--- a/.github/workflows/ch03-04-01-env-variables.yml
+++ b/.github/workflows/ch03-04-01-env-variables.yml
@@ -1,7 +1,7 @@
 name: ch03-04-01-env-variables
 env:
   WORKSPACE_ENVIRONMENT_VARIABLE: 'custom workspace environment variable'
-on: [push]
+on: [pull_request]
 jobs:
   ubuntu:
     env:
