--- a/.github/workflows/ch03-06-01-artifact.yml
+++ b/.github/workflows/ch03-06-01-artifact.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v1
 
+    - name: Copy files into directory
+      run: cp -v Ch03/03_06/hello-server.go  ./home/runner/go/src/hello-server.go 
+
     - name: Build ${{ env.FILE_NAME }} for ubuntu-latest
       run: go build ${{ env.FILE_NAME }}.go
 
