--- a/.github/workflows/ch03-06-01-artifact.yml
+++ b/.github/workflows/ch03-06-01-artifact.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
 
     - name: Check out code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
     
 
     - name: List project files
@@ -20,7 +20,7 @@ jobs:
           ls -ltr
 
     - name: Copy files into directory
-      run: cp -v Ch03/03_06/hello-server.go  ./home/runner/go/src/hello-server.go 
+      run: cp -v Ch03/03_06/hello-server.go  ./hello-server.go 
 
     - name: Build ${{ env.FILE_NAME }} for ubuntu-latest
       run: go build ${{ env.FILE_NAME }}.go
