--- a/.github/workflows/ch04-02-01-pipeline.yml
+++ b/.github/workflows/ch04-02-01-pipeline.yml
@@ -12,6 +12,9 @@ jobs:
     - name: Copy repo files into yaml directory
       run: cp -r Ch04/04_01/ ./
 
+    - name: check files
+      run: ls
+
     - name: Setup Python environment
       uses: actions/setup-python@v1.1.1
     - name: Install requirements
