--- a/.github/workflows/ch04-02-01-pipeline.yml
+++ b/.github/workflows/ch04-02-01-pipeline.yml
@@ -1,9 +1,11 @@
 name: ch04-02-01-Pipeline
 
-on: [push]
+on: [pull_request]
+
 env:
   APPLICATION_NAME: app2
 
+# change directory with working directory
 defaults:
   run:
     working-directory: Ch04/04_01
@@ -14,20 +16,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # - name: change directory
-      # run: cd Ch04/04_01/
-
     - name: check files
       run: ls
 
     - name: Setup Python environment
       uses: actions/setup-python@v1.1.1
+ 
     - name: Install requirements
       run: pip install --quiet --requirement requirements.txt
+
     - name: Lint code
       run: |
         flake8 --ignore=E501,E231 *.py
         pylint --disable=C0301 --disable=C0326 *.py
+
     - name: Run unit tests
       run: |
         python -m unittest --verbose --failfast
